force-app/main/default/objects/custom_create17__c/custom_create17__c.object-meta.xml
<CustomObject>
    <label>Custom created object17</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects17</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>