force-app/main/default/objects/custom_create17__c/fields/custom_create_17field593__c.field-meta.xml
<CustomField>
    <fullName>custom_create_17field593__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 17field593</label>
    <type>Checkbox</type>
</CustomField>