force-app/main/default/objects/custom_create17__c/fields/custom_create_17field630__c.field-meta.xml
<CustomField>
    <fullName>custom_create_17field630__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 17field630</label>
    <type>Checkbox</type>
</CustomField>